# docs/swagger.json
@@ -17,7 +17,7 @@
     "host": "penelitian-tugas.herokuapp.com",
     "basePath": "/",
     "paths": {
-        "/presensi": {
+        "/semua": {
             "get": {
                 "description": "Mengambil semua data presensi.",
                 "consumes": [
@@ -27,7 +27,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Presensi"
+                    "semua"
                 ],
                 "summary": "Get All Data Presensi.",
                 "responses": {
